snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2-sources.jar.sha512
bf5497fdb27cd2d0983512748eb1898d78261c6c0685e41bed67d61c6b98f192df596925f5b6d622b59f267986840c748089d78a792385b0e1d249aa1ecb5613